# finitefield

./: .gitignore  CMakeLists.txt  README.md
include/: cyc_conv.hpp  fast_recursive_ntt.hpp  intt_naive_slow.hpp  lin_conv.hpp  linear_convolution.hpp  mod_t.hpp  mod_utils_H.hpp  ncyc_conv.hpp  ntt_naive_slow.hpp  ntt_naive_slow_multiply.hpp  poly_eval.hpp
tests/: test_cyc_conv.cpp  test_intt_naive_slow.cpp  test_lin_conv.cpp  test_mod_t.cpp  test_ncyc_conv.cpp  test_ntt_naive_slow.cpp  test_ntt_naive_slow_multiply.cpp  test_poly_eval.cpp
